--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dompdf/dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "phpoffice/phpword": "^1.4",
         "spatie/laravel-multitenancy": "^4.0",
         "spatie/laravel-permission": "^6.18",
         "tightenco/ziggy": "^2.0"
